--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   "author": "rld2drkw",
   "license": "MIT",
   "devDependencies": {
-    "coffee-script": "^1.10.0",
     "jake": "^8.0.12",
     "jasmine": "^2.4.1",
     "coffee-json-dsl-my-example": "./spec/fixtures/plugins/coffee-json-dsl-my-example"
   },
-  "dependencies": {},
+  "dependencies": {
+    "coffee-script": "^1.10.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rld2drkw/coffee-json-dsl.git"
